# burnrate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pytest.ini  release-notes-v0.4.0.md  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
HomebrewFormula/: burnrate.rb
apps-script/: Code.gs
backend/: config.py  main.py  requirements.txt
backend/models/: database.py  models.py
backend/parsers/: axis.py  axis_bank_csv.py  bank_csv_base.py  base.py  currency_infer.py  detector.py  federal.py  federal_scapia.py  generic.py  generic_bank_csv.py  hdfc.py  hdfc_bank_csv.py  icici.py  icici_bank_csv.py  idfc_first.py  indian_bank.py  payment_due_date.py  sbi_bank_csv.py
docs/: CONSTITUTION.md  architecture.md  docker-installation.md  homebrew-installation.md  macos-installation.md  release-process.md  requirements.md  windows-installation.md
frontend-neopop/: index.html  package-lock.json  package.json  run_playwright.cjs  tsconfig.app.json  vite.config.ts
scripts/: build-macos.sh  build-windows.bat  burnrate.iss  generate_idfc_fixture_pdf.py  launch.py
site/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: sidecar.json
src-tauri/src/: main.rs
tests/: conftest.py  synthetic_profile.py  test_api.py  test_bank_csv.py  test_browser.py  test_currency_analytics.py  test_gmail_api.py  test_milestones_api.py  test_offers_api.py  test_parsers.py  test_period_resolver.py  test_settings_card_removal.py
(+205 files in other folders)
